--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Sell ON</title>
     <link rel="shortcut icon" href="./used/imgs/shop.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./bootstrap-5.3.0-dist/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="./bootstrap-5.3.0-dist/css/bootstrap.css">
 </head>
 
 <body>
@@ -470,8 +470,7 @@
     </section>
 
     <!-- //bootstrap_js -->
-
-        </script>
+        <script src="./bootstrap-5.3.0-dist/js/bootstrap.js"></script>
     <!-- main-js -->
     <script src="script.js"></script>
 </body>
