--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </header>
-        <div class="modal-dialog d-none position-fixed bg-body-tertiary top-50 start-50 translate-middle loginForm"
+        <div class="modal-dialog d-none position-fixed bg-body-tertiary loginForm"
             role="document">
             <div class="modal-content rounded-4  shadow">
                 <div class="modal-header p-5 pb-4 border-bottom-0">
