--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             </svg>
                             <div class="mb-1 text-body-secondary">Nov 12</div>
                             <p class="card-text mb-auto">We are able for you all time...</p>
-                            <p class="mb-auto text-nowrap bg-body-secondary border my-2" id="livesupport">Lorem ipsum
+                            <p class="mb-auto text-nowrap bg-body-secondary border my-2 overflow-hidden" id="livesupport">Lorem ipsum
                                 dolor sit amet consectetur adipisicing elit. Ad nulla ex saepe qui modi illo tempora
                                 placeat optio harum totam quia dolorem non, cum impedit beatae, alias dolor, culpa
                                 eaque.</p>
@@ -272,7 +272,7 @@
                             </svg>
                             <div class="mb-1 text-body-secondary">Nov 11</div>
                             <p class="mb-auto">it's easy to manage your business from mopile .</p>
-                            <p class="mb-auto text-nowrap bg-body-secondary border my-2" id="managemopile">really it's
+                            <p class="mb-auto text-nowrap bg-body-secondary border my-2 overflow-hidden" id="managemopile">really it's
                                 easy to manage your business from mopile just using the website and open what u have
                                 selled and what still not send and easy to drop down pictures of what u want to sell</p>
                             <a class="icon-link gap-1 icon-link-hover stretched-link" id="managebtn">
